# chat_instagram

./: .env  .gitignore  README.md  pyproject.toml
app/: GetAcoes.py  GetBitcoin.py  SalvaDB.py  app.py  coleta_dados.py  mongo_tst.py  postgre_tst.py
