[project]
name = "chat-instagram"
version = "0.1.0"
description = "ChatBot no Instagram usando recursos pre-carregados em estudos"
authors = [
    {name = "Guilherme Roemro"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "pymongo (>=4.14.1,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "datetime (>=5.5,<6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
